Fixed picture not showing after showing first

--- a/client/nui/main.css
+++ b/client/nui/main.css
@@ -13,8 +13,8 @@ body {
 
 .picture-container {
 	position: relative;
-	width: 500px;
-	height: 600px;
+	width: 1000px;
+	height: 1000px;
 	padding: 25px;
 	border: 1px solid #999999;
 	border-radius: 2px;
@@ -27,7 +27,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	height: 70%;
+	height: 90%;
 }
 
 .info {
